[gd_scene load_steps=4 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 32.0
content_margin_right = 0.0
content_margin_top = 13.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0.701961 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0, 0, 0.901961 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2( -124.704, 0 )
use_snap = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="GraphNode" parent="GraphEdit"]
margin_left = 154.704
margin_top = 260.0
margin_right = 215.704
margin_bottom = 286.0
mouse_filter = 1
custom_styles/commentfocus = SubResource( 1 )
custom_styles/comment = SubResource( 1 )
custom_styles/frame = SubResource( 1 )
custom_styles/selectedframe = SubResource( 1 )
custom_styles/position = SubResource( 1 )
custom_styles/defaultfocus = SubResource( 1 )
custom_styles/breakpoint = SubResource( 1 )
custom_styles/defaultframe = SubResource( 1 )
custom_colors/title_color = Color( 1, 0.992157, 0.992157, 1 )
custom_constants/port_offset = 0
title = "Start"
offset = Vector2( 30, 260 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="GraphEdit/Start"]
margin_left = 32.0
margin_top = 13.0
margin_right = 61.0
margin_bottom = 13.0

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 410.0
margin_top = 208.0
margin_right = 514.0
margin_bottom = 295.0
items = [ "Text", null, 0, false, false, 0, 0, null, "", false, "Options", null, 0, false, false, 1, 0, null, "", false, "Action", null, 0, false, false, 2, 0, null, "", false, "Change Scene", null, 0, false, false, 3, 0, null, "", false ]
hide_on_state_item_selection = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="popup_request" from="GraphEdit" to="." method="_on_GraphEdit_popup_request"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
